Makes code compileable for Java 8.
Signed-off-by: Werner Randelshofer <werner.randelshofer@fibermail.ch>