@@ -1147,7 +1147,7 @@ public class SvgTinySceneGraphReaderNew {
             case XMLStreamConstants.SPACE:
                 break;
             case XMLStreamConstants.CHARACTERS:
-                if (!r.getText().isBlank()) {
+                if (!r.getText().trim().isEmpty()) {
                     logWarning(r, "<svg>: warning skipping characters: \"" + r.getText() + "\".");
                 }
                 break;
